# DataFlex-RL

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  QUICKSTART.md
docs_site/: README.md  package.json
examples/: build_2domain_gsm8k.py  build_dapo_parquet.py  run_demo.sh  run_mix_grpo.sh  run_opd_mix.sh  run_opd_reweight_pg.sh  run_opd_select_pg.sh  run_reweight_grpo.sh  run_select_grpo.sh
experiments/: RESULTS.md  aggregate_benchmarks.py  aggregate_eval.py  build_extra_benchmarks.py  build_more_benchmarks.py  df_gpu_cleanup.sh  df_watchdog.sh  eval_7b_parallel.sh  eval_all.sh  eval_benchmark.py  eval_benchmark_batch.py  eval_benchmarks_all.sh  eval_campaign_v1.sh  eval_multidomain.py  gen_jobs.sh  gen_jobs_mix.sh  merge_campaign_v1.sh  merge_new_7b.sh  queue_worker.sh  queue_worker_mix.sh  run_all.sh  run_all_7b.sh  run_local_6.sh  run_new_algos_7b.sh  run_opd_7b.sh  run_opd_smoke.sh  run_seeds_7b.sh  train_one.sh  train_one_05b_jizhi.sh  train_one_05b_local.sh  train_one_7b.sh  train_one_7b_jizhi.sh  train_one_mix_jizhi.sh  train_one_opd_7b.sh
experiments/data/: build_multidomain.py
experiments/orthogonality/: kt_ortho.py
research/: 01_selection.md  02_reweighting.md  03_mixture.md  04_what_beats_baseline.md  05_rl_opd_fusion_plan.md  README.md
results/: CAMPAIGN_v2_MIXER_RESULTS.md  CAMPAIGN_v2_RESULTS.md  all_runs_171.csv  build_tables.py  campaign_v2_eval_summary.csv  merge_all_runs.py
results/paper1_kt_ortho/: OPD_TRAINING_BUG.md  README.md
results/scripts/: aggregate_v2.py  method_summary.py  (+1 more)
tests/: test_components.py  test_core.py
(+51 files in other folders)
